--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,78 @@
-html,
-body {
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap");
+
+/* RESET + BASIC STYLES */
+* {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  box-sizing: border-box;
+}
+body {
+  background: #eaeaea;
+  color: #333;
+  font-family: "Nunito";
+  min-height: 100vh;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
-
-* {
-  box-sizing: border-box;
+a:link,
+a:visited {
+  color: inherit;
 }
+
+.container {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.logo {
+  font-size: 1.8rem;
+  text-align: center;
+  text-decoration: underline wavy orangered;
+  text-underline-offset: 0.2rem;
+}
+
+footer {
+  text-align: center;
+  padding: 1rem;
+}
+
+/* Not Found */
+.notfound-heading {
+  font-size: 3rem;
+  color: orangered;
+  margin-right: 1rem;
+}
+.notfound-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 85vh;
+}
+
+/* ----- */
+
+/* Home Page */
+
+.home-main {
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.cuisine-item {
+  flex: 0 0 50%;
+  padding: 1rem;
+}
+.cuisine-item .title {
+  font-size: 1.2rem;
+}
+
+.date {
+  font-size: 0.9rem;
+  color: rgb(110, 110, 110);
+}
+/* ---- */
